--- a/resources/assets/css/default.css
+++ b/resources/assets/css/default.css
@@ -1,29 +1,82 @@
-html, body {
+@font-face{font-family:'Nunito';font-style:italic;font-weight:200;src:local('Nunito ExtraLight Italic'),local('Nunito-ExtraLightItalic'),url(https://fonts.gstatic.com/s/nunito/v10/XRXQ3I6Li01BKofIMN5MZ9vFUT8_DQ.woff2) format('woff2');unicode-range:U+0102-0103,U+0110-0111,U+1EA0-1EF9,U+20AB}@font-face{font-family:'Nunito';font-style:italic;font-weight:200;src:local('Nunito ExtraLight Italic'),local('Nunito-ExtraLightItalic'),url(https://fonts.gstatic.com/s/nunito/v10/XRXQ3I6Li01BKofIMN5MZ9vEUT8_DQ.woff2) format('woff2');unicode-range:U+0100-024F,U+0259,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF}@font-face{font-family:'Nunito';font-style:italic;font-weight:200;src:local('Nunito ExtraLight Italic'),local('Nunito-ExtraLightItalic'),url(https://fonts.gstatic.com/s/nunito/v10/XRXQ3I6Li01BKofIMN5MZ9vKUT8.woff2) format('woff2');unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD}@font-face{font-family:'Nunito';font-style:italic;font-weight:300;src:local('Nunito Light Italic'),local('Nunito-LightItalic'),url(https://fonts.gstatic.com/s/nunito/v10/XRXQ3I6Li01BKofIMN4oZNvFUT8_DQ.woff2) format('woff2');unicode-range:U+0102-0103,U+0110-0111,U+1EA0-1EF9,U+20AB}@font-face{font-family:'Nunito';font-style:italic;font-weight:300;src:local('Nunito Light Italic'),local('Nunito-LightItalic'),url(https://fonts.gstatic.com/s/nunito/v10/XRXQ3I6Li01BKofIMN4oZNvEUT8_DQ.woff2) format('woff2');unicode-range:U+0100-024F,U+0259,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF}@font-face{font-family:'Nunito';font-style:italic;font-weight:300;src:local('Nunito Light Italic'),local('Nunito-LightItalic'),url(https://fonts.gstatic.com/s/nunito/v10/XRXQ3I6Li01BKofIMN4oZNvKUT8.woff2) format('woff2');unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD}@font-face{font-family:'Nunito';font-style:italic;font-weight:400;src:local('Nunito Italic'),local('Nunito-Italic'),url(https://fonts.gstatic.com/s/nunito/v10/XRXX3I6Li01BKofIMNaMRs71cA.woff2) format('woff2');unicode-range:U+0102-0103,U+0110-0111,U+1EA0-1EF9,U+20AB}@font-face{font-family:'Nunito';font-style:italic;font-weight:400;src:local('Nunito Italic'),local('Nunito-Italic'),url(https://fonts.gstatic.com/s/nunito/v10/XRXX3I6Li01BKofIMNaNRs71cA.woff2) format('woff2');unicode-range:U+0100-024F,U+0259,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF}@font-face{font-family:'Nunito';font-style:italic;font-weight:400;src:local('Nunito Italic'),local('Nunito-Italic'),url(https://fonts.gstatic.com/s/nunito/v10/XRXX3I6Li01BKofIMNaDRs4.woff2) format('woff2');unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD}@font-face{font-family:'Nunito';font-style:italic;font-weight:600;src:local('Nunito SemiBold Italic'),local('Nunito-SemiBoldItalic'),url(https://fonts.gstatic.com/s/nunito/v10/XRXQ3I6Li01BKofIMN5cYtvFUT8_DQ.woff2) format('woff2');unicode-range:U+0102-0103,U+0110-0111,U+1EA0-1EF9,U+20AB}@font-face{font-family:'Nunito';font-style:italic;font-weight:600;src:local('Nunito SemiBold Italic'),local('Nunito-SemiBoldItalic'),url(https://fonts.gstatic.com/s/nunito/v10/XRXQ3I6Li01BKofIMN5cYtvEUT8_DQ.woff2) format('woff2');unicode-range:U+0100-024F,U+0259,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF}@font-face{font-family:'Nunito';font-style:italic;font-weight:600;src:local('Nunito SemiBold Italic'),local('Nunito-SemiBoldItalic'),url(https://fonts.gstatic.com/s/nunito/v10/XRXQ3I6Li01BKofIMN5cYtvKUT8.woff2) format('woff2');unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD}
+@font-face{font-family:'Nunito';font-style:italic;font-weight:700;src:local('Nunito Bold Italic'),local('Nunito-BoldItalic'),url(https://fonts.gstatic.com/s/nunito/v10/XRXQ3I6Li01BKofIMN44Y9vFUT8_DQ.woff2) format('woff2');unicode-range:U+0102-0103,U+0110-0111,U+1EA0-1EF9,U+20AB}@font-face{font-family:'Nunito';font-style:italic;font-weight:700;src:local('Nunito Bold Italic'),local('Nunito-BoldItalic'),url(https://fonts.gstatic.com/s/nunito/v10/XRXQ3I6Li01BKofIMN44Y9vEUT8_DQ.woff2) format('woff2');unicode-range:U+0100-024F,U+0259,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF}@font-face{font-family:'Nunito';font-style:italic;font-weight:700;src:local('Nunito Bold Italic'),local('Nunito-BoldItalic'),url(https://fonts.gstatic.com/s/nunito/v10/XRXQ3I6Li01BKofIMN44Y9vKUT8.woff2) format('woff2');unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD}@font-face{font-family:'Nunito';font-style:italic;font-weight:800;src:local('Nunito ExtraBold Italic'),local('Nunito-ExtraBoldItalic'),url(https://fonts.gstatic.com/s/nunito/v10/XRXQ3I6Li01BKofIMN4kYNvFUT8_DQ.woff2) format('woff2');unicode-range:U+0102-0103,U+0110-0111,U+1EA0-1EF9,U+20AB}@font-face{font-family:'Nunito';font-style:italic;font-weight:800;src:local('Nunito ExtraBold Italic'),local('Nunito-ExtraBoldItalic'),url(https://fonts.gstatic.com/s/nunito/v10/XRXQ3I6Li01BKofIMN4kYNvEUT8_DQ.woff2) format('woff2');unicode-range:U+0100-024F,U+0259,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF}@font-face{font-family:'Nunito';font-style:italic;font-weight:800;src:local('Nunito ExtraBold Italic'),local('Nunito-ExtraBoldItalic'),url(https://fonts.gstatic.com/s/nunito/v10/XRXQ3I6Li01BKofIMN4kYNvKUT8.woff2) format('woff2');unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD}@font-face{font-family:'Nunito';font-style:italic;font-weight:900;src:local('Nunito Black Italic'),local('Nunito-BlackItalic'),url(https://fonts.gstatic.com/s/nunito/v10/XRXQ3I6Li01BKofIMN4AYdvFUT8_DQ.woff2) format('woff2');unicode-range:U+0102-0103,U+0110-0111,U+1EA0-1EF9,U+20AB}@font-face{font-family:'Nunito';font-style:italic;font-weight:900;src:local('Nunito Black Italic'),local('Nunito-BlackItalic'),url(https://fonts.gstatic.com/s/nunito/v10/XRXQ3I6Li01BKofIMN4AYdvEUT8_DQ.woff2) format('woff2');unicode-range:U+0100-024F,U+0259,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF}@font-face{font-family:'Nunito';font-style:italic;font-weight:900;src:local('Nunito Black Italic'),local('Nunito-BlackItalic'),url(https://fonts.gstatic.com/s/nunito/v10/XRXQ3I6Li01BKofIMN4AYdvKUT8.woff2) format('woff2');unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD}@font-face{font-family:'Nunito';font-style:normal;font-weight:200;src:local('Nunito ExtraLight'),local('Nunito-ExtraLight'),url(https://fonts.gstatic.com/s/nunito/v10/XRXW3I6Li01BKofA-seUbuvISTs.woff2) format('woff2');unicode-range:U+0102-0103,U+0110-0111,U+1EA0-1EF9,U+20AB}@font-face{font-family:'Nunito';font-style:normal;font-weight:200;src:local('Nunito ExtraLight'),local('Nunito-ExtraLight'),url(https://fonts.gstatic.com/s/nunito/v10/XRXW3I6Li01BKofA-seUb-vISTs.woff2) format('woff2');unicode-range:U+0100-024F,U+0259,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF}@font-face{font-family:'Nunito';font-style:normal;font-weight:200;src:local('Nunito ExtraLight'),local('Nunito-ExtraLight'),url(https://fonts.gstatic.com/s/nunito/v10/XRXW3I6Li01BKofA-seUYevI.woff2) format('woff2');unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD}@font-face{font-family:'Nunito';font-style:normal;font-weight:300;src:local('Nunito Light'),local('Nunito-Light'),url(https://fonts.gstatic.com/s/nunito/v10/XRXW3I6Li01BKofAnsSUbuvISTs.woff2) format('woff2');unicode-range:U+0102-0103,U+0110-0111,U+1EA0-1EF9,U+20AB}
+@font-face{font-family:'Nunito';font-style:normal;font-weight:300;src:local('Nunito Light'),local('Nunito-Light'),url(https://fonts.gstatic.com/s/nunito/v10/XRXW3I6Li01BKofAnsSUb-vISTs.woff2) format('woff2');unicode-range:U+0100-024F,U+0259,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF}@font-face{font-family:'Nunito';font-style:normal;font-weight:300;src:local('Nunito Light'),local('Nunito-Light'),url(https://fonts.gstatic.com/s/nunito/v10/XRXW3I6Li01BKofAnsSUYevI.woff2) format('woff2');unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD}@font-face{font-family:'Nunito';font-style:normal;font-weight:400;src:local('Nunito Regular'),local('Nunito-Regular'),url(https://fonts.gstatic.com/s/nunito/v10/XRXV3I6Li01BKofIOuaBXso.woff2) format('woff2');unicode-range:U+0102-0103,U+0110-0111,U+1EA0-1EF9,U+20AB}@font-face{font-family:'Nunito';font-style:normal;font-weight:400;src:local('Nunito Regular'),local('Nunito-Regular'),url(https://fonts.gstatic.com/s/nunito/v10/XRXV3I6Li01BKofIO-aBXso.woff2) format('woff2');unicode-range:U+0100-024F,U+0259,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF}@font-face{font-family:'Nunito';font-style:normal;font-weight:400;src:local('Nunito Regular'),local('Nunito-Regular'),url(https://fonts.gstatic.com/s/nunito/v10/XRXV3I6Li01BKofINeaB.woff2) format('woff2');unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD}@font-face{font-family:'Nunito';font-style:normal;font-weight:600;src:local('Nunito SemiBold'),local('Nunito-SemiBold'),url(https://fonts.gstatic.com/s/nunito/v10/XRXW3I6Li01BKofA6sKUbuvISTs.woff2) format('woff2');unicode-range:U+0102-0103,U+0110-0111,U+1EA0-1EF9,U+20AB}@font-face{font-family:'Nunito';font-style:normal;font-weight:600;src:local('Nunito SemiBold'),local('Nunito-SemiBold'),url(https://fonts.gstatic.com/s/nunito/v10/XRXW3I6Li01BKofA6sKUb-vISTs.woff2) format('woff2');unicode-range:U+0100-024F,U+0259,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF}@font-face{font-family:'Nunito';font-style:normal;font-weight:600;src:local('Nunito SemiBold'),local('Nunito-SemiBold'),url(https://fonts.gstatic.com/s/nunito/v10/XRXW3I6Li01BKofA6sKUYevI.woff2) format('woff2');unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD}@font-face{font-family:'Nunito';font-style:normal;font-weight:700;src:local('Nunito Bold'),local('Nunito-Bold'),url(https://fonts.gstatic.com/s/nunito/v10/XRXW3I6Li01BKofAjsOUbuvISTs.woff2) format('woff2');unicode-range:U+0102-0103,U+0110-0111,U+1EA0-1EF9,U+20AB}@font-face{font-family:'Nunito';font-style:normal;font-weight:700;src:local('Nunito Bold'),local('Nunito-Bold'),url(https://fonts.gstatic.com/s/nunito/v10/XRXW3I6Li01BKofAjsOUb-vISTs.woff2) format('woff2');unicode-range:U+0100-024F,U+0259,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF}@font-face{font-family:'Nunito';font-style:normal;font-weight:700;src:local('Nunito Bold'),local('Nunito-Bold'),url(https://fonts.gstatic.com/s/nunito/v10/XRXW3I6Li01BKofAjsOUYevI.woff2) format('woff2');unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD}@font-face{font-family:'Nunito';font-style:normal;font-weight:800;src:local('Nunito ExtraBold'),local('Nunito-ExtraBold'),url(https://fonts.gstatic.com/s/nunito/v10/XRXW3I6Li01BKofAksCUbuvISTs.woff2) format('woff2');unicode-range:U+0102-0103,U+0110-0111,U+1EA0-1EF9,U+20AB}
+@font-face{font-family:'Nunito';font-style:normal;font-weight:800;src:local('Nunito ExtraBold'),local('Nunito-ExtraBold'),url(https://fonts.gstatic.com/s/nunito/v10/XRXW3I6Li01BKofAksCUb-vISTs.woff2) format('woff2');unicode-range:U+0100-024F,U+0259,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF}@font-face{font-family:'Nunito';font-style:normal;font-weight:800;src:local('Nunito ExtraBold'),local('Nunito-ExtraBold'),url(https://fonts.gstatic.com/s/nunito/v10/XRXW3I6Li01BKofAksCUYevI.woff2) format('woff2');unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD}@font-face{font-family:'Nunito';font-style:normal;font-weight:900;src:local('Nunito Black'),local('Nunito-Black'),url(https://fonts.gstatic.com/s/nunito/v10/XRXW3I6Li01BKofAtsGUbuvISTs.woff2) format('woff2');unicode-range:U+0102-0103,U+0110-0111,U+1EA0-1EF9,U+20AB}@font-face{font-family:'Nunito';font-style:normal;font-weight:900;src:local('Nunito Black'),local('Nunito-Black'),url(https://fonts.gstatic.com/s/nunito/v10/XRXW3I6Li01BKofAtsGUb-vISTs.woff2) format('woff2');unicode-range:U+0100-024F,U+0259,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF}@font-face{font-family:'Nunito';font-style:normal;font-weight:900;src:local('Nunito Black'),local('Nunito-Black'),url(https://fonts.gstatic.com/s/nunito/v10/XRXW3I6Li01BKofAtsGUYevI.woff2) format('woff2');unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD}
+
+*{
+    margin:0;
+    padding:0
+}
+
+*::-webkit-scrollbar{
+    display:none
+}
+
+html,body{
+    width:100%;
+    font-family:'Nunito',PingFang SC,Microsoft YaHei,STXihei,sans-serif
+}
+
+.border-color-c0d3eb {
+    border-color: #c0d3eb !important;
+}
+
+.text-a3aab1 {
+    color: #a3aab1
+}
+
+.ml-1025em {
+    margin-left: 1.25em;
+}
+
+.cursor-default {
+    cursor: default!important;
+}
+
+summary:focus {
+    outline: none;
+}
+
+.navigation-bar {
     width: 100%;
+    height: 64px;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Nunito', PingFang SC, Microsoft YaHei, STXihei, sans-serif;
-    cursor: default;
-    color: #212529;
+.navigation-bar-icon {
+    margin: 8px 0;
 }
 
-*::-webkit-scrollbar {
-    display: none
+.navigation-bar-btn-right,
+.navigation-bar-btn{
+    line-height: 64px;
+    color: white;
+    margin-left: 1.25em;
 }
 
-input:focus {
-    outline: 0;
+.navigation-bar-btn:hover{
+    font-weight: bold;
+    text-decoration:none;
 }
 
-li {
-    list-style: none;
+.navigation-bar-btn-right:hover{
+    text-decoration:none;
 }
 
-a {
-    text-decoration: none;
-    cursor: pointer;
+.recent-updates a {
+    display: inherit;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    color: #586069!important;
+    padding: 3px 0;
+}
+
+.header-search {
+    width: 100% !important;
+    padding-top: 4px !important;
+}
+
+.header-search-icon {
+    top: 18px !important;
+    left: 24px !important;
 }
